# cookiecutter-pyuv

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_name}}/: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.project_name}}/licenses/bsd/: header
{{cookiecutter.project_name}}/licenses/gpl/: header
{{cookiecutter.project_name}}/licenses/mit/: header
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  version.py
{{cookiecutter.project_name}}/tests/: __init__.py
