[project]
name = "cookiecutter-pyuv"
version = "0.1.0"
description = "A cookiecutter template for Python project that uses uv for dependencies management."
authors = [{ name = "Alessandro Sias", email = "ale.sias@hotmail.it" }]
readme = "README.md"
keywords = ["python", "cookiecutter", "uv"]
requires-python = "==3.13.*"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Repository = "https://github.com/AleSias87/cookiecutter-pyuv"
Documentation = "https://AleSias87.github.io/cookiecutter-pyuv/README.md"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "tox-uv>=1.11.3",
    "pylint>=3.3.3",
    "pyright>=1.1",
    "ruff>=0.9.1",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "codespell>=2.3.0",
    "sphinx>=7.3.7",
    "pydata-sphinx-theme>=0.16.1",
    "pre-commit>=2.20.0",
    "pytest-cookies>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --import-mode=importlib"
pythonpath = ["."]

[tool.pylint.main]
py-version = "3.13"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "none"
reportImplicitStringConcatenation = "error"
reportImportCycles = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "error"
include = ["hooks", "tests"]

[tool.ruff]
line-length = 100
show-fixes = true
include = ["hooks", "tests"]

[tool.ruff.lint]
select = [
    "YTT",     # flake8-2020
    "S",       # flake8-bandit
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "T10",     # flake8-debugger
    "SIM",     # flake8-simplify
    "I",       # isort
    "C90",     # mccabe
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "PGH",     # pygrep-hooks
    "UP",      # pyupgrade
    "RUF",     # ruff
    "TRY",     # tryceratops
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["hooks", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.black]
line-length=100
include = ".pyi?$"
